styles.css
/* RESET*/
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/*END OF RESET*/

/*move the html part to the full screen on PC's - messes up the layout in mobile*/
/* html {
  display: flex;
  justify-content: center;
} */

body {
  display: inline-flex;
  flex-direction: column;
  background-color: rgb(10, 8, 10);
  color: azure;
  font-family: "Comfortaa", cursive;
}

.main_title-section,
.gauge-section,
.disclaimer,
footer {
  display: grid;
  justify-items: center;
}

.main_title-section > h1 {
  font-size: 3em;
  font-family: "Shizuru", cursive;
  margin: 1em;
  position: relative;
  bottom: 1em;
}

.main_title-noisy {
  color: red;
  font-size: 2em;
  position: relative;
  top: 0.34em;
  left: 0.05em;
}

p {
  margin: 2em;
  text-align: justify;
  max-width: 900px;
}

/*GAUGE SECTION*/

.gauge-section {
  width: max-content;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 60% 20% 10%;
}

#gauge_canvas {
  grid-column: 1 / span 3;
  grid-row: 1 / span 3;
}

.gauge-output-value {
  display: inline-flex;
  grid-column: 2;
  grid-row: 2;
  font-family: "Shizuru", cursive;
  font-size: 2em;
  width: 100%;
  justify-content: center;
  margin: 0 auto;
  /*line-height in this case positions the dB in line with the dynamicValue. With line-heigth normal it is at its top*/
  line-height: 300%;
}

#dynamicValue {
  font-size: 2.5em;
  width: 70%;
  color: limegreen;
  text-align: center;
  line-height: 70%;
}

.gauge_start-btn {
  grid-column: 1;
  grid-row: 3;
  justify-self: end;
}

.gauge_pause-btn {
  grid-column: 2;
  grid-row: 3;
}

.gauge_stop-btn {
  grid-column: 3;
  grid-row: 3;
  justify-self: baseline;
}

button {
  width: 80%;
  height: 90%;
  font-size: 1.5em;
  border-radius: 34px;
  border-color: azure;
  background-color: rgb(10, 8, 10);
  color: azure;
}

button:hover {
  background-color: rgb(57, 134, 18);
}

